Support multi email sending